--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/joi": "^17.2.2",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "joi": "^17.13.3",
     "openai": "^4.20.1",
     "playwright": "^1.40.1",
     "uuid": "^9.0.1"
