--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "dist/app.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
@@ -11,6 +12,5 @@
       "src": "/(.*)",
       "dest": "dist/app.js"
     }
-  ],
-  "outputDirectory": "dist"
+  ]
 }
