--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A TypeScript-based automation agent for scraping and enriching book data",
   "main": "dist/app.js",
   "scripts": {
-    "start": "npm run build && node dist/app.js",
+    "start": "node dist/app.js",
     "dev": "ts-node src/app.ts",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": [
@@ -34,6 +34,7 @@
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
     "prettier": "^3.1.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
