--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "ts-node src/app.ts",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && npx playwright install chromium",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": [
